# ircord-client

./: .gitignore  CMakeLists.txt  README.md  SETTINGS_SCREEN.md  TODO & BUGS.md  TODO.md  install-client.cmd  vcpkg.json
cmake/: functions.cmake
config/: client.toml  client.toml.example
help/: channels.md  commands.md  crypto.md  files.md  help.md  shortcuts.md  voice.md
resources/: default_colors.toml
src/: app.cpp  app.hpp  config.cpp  config.hpp  main.cpp
src/crypto/: crypto_engine.cpp  crypto_engine.hpp  group_session.cpp  group_session.hpp  identity.cpp  identity.hpp  signal_store.cpp  signal_store.hpp
src/db/: local_store.cpp  local_store.hpp  migrations.cpp  migrations.hpp
src/file/: file_transfer.cpp  file_transfer.hpp
src/help/: help_manager.cpp  help_manager.hpp
src/input/: command_parser.cpp  command_parser.hpp  input_handler.cpp  input_handler.hpp  tab_complete.cpp  tab_complete.hpp
src/net/: message_handler.cpp  message_handler.hpp  net_client.cpp  net_client.hpp
src/preview/: link_previewer.cpp  link_previewer.hpp
src/proto/: ircord.proto
src/state/: app_state.cpp  app_state.hpp  channel_state.hpp  voice_state.hpp
src/ui/: color_scheme.hpp  input_line.cpp  input_line.hpp  layout.cpp  layout.hpp  link_preview.cpp  link_preview.hpp  login_screen.cpp  login_screen.hpp  markdown_renderer.cpp  markdown_renderer.hpp  message_view.cpp  message_view.hpp  mouse_support.cpp  mouse_support.hpp  settings_screen.cpp  settings_screen.hpp  status_bar.cpp  status_bar.hpp  tab_bar.cpp  tab_bar.hpp  ui_manager.cpp  ui_manager.hpp  user_list_panel.cpp  user_list_panel.hpp
src/voice/: audio_device.cpp  audio_device.hpp  jitter_buffer.cpp  jitter_buffer.hpp  opus_codec.cpp  opus_codec.hpp  voice_engine.cpp  voice_engine.hpp
tests/: test_config.cpp  test_input_line.cpp
